// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render with checked styles 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus + label::before:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-0:checked + label::after {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

<input
    checked=""
    class="circuit-0 circuit-1"
    id="radio-button_2"
    type="radio"
    value=""
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
}

.circuit-0::before {
  box-sizing: border-box;
  height: 16px;
  width: 16px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  box-sizing: border-box;
  height: 8px;
  width: 8px;
  background-color: #3388FF;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  opacity: 0;
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

<label
    class="circuit-0 circuit-1"
    for="radio-button_2"
  />,
]
`;

exports[`RadioButton should render with default styles 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus + label::before:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-0:checked + label::after {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

<input
    class="circuit-0 circuit-1"
    id="radio-button_1"
    type="radio"
    value=""
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
}

.circuit-0::before {
  box-sizing: border-box;
  height: 16px;
  width: 16px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  box-sizing: border-box;
  height: 8px;
  width: 8px;
  background-color: #3388FF;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  opacity: 0;
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

<label
    class="circuit-0 circuit-1"
    for="radio-button_1"
  />,
]
`;

exports[`RadioButton should render with disabled styles 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus + label::before:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-0:checked + label::after {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

<input
    class="circuit-0 circuit-1"
    disabled=""
    id="radio-button_3"
    type="radio"
    value=""
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0::before {
  box-sizing: border-box;
  height: 16px;
  width: 16px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  box-sizing: border-box;
  height: 8px;
  width: 8px;
  background-color: #3388FF;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  opacity: 0;
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-0::before {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  border-color: #9DA7B1;
  background-color: #FAFBFC;
}

.circuit-0::after {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  background-color: #9DA7B1;
}

<label
    class="circuit-0 circuit-1"
    disabled=""
    for="radio-button_3"
  />,
]
`;

exports[`RadioButton should render with invalid styles 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus + label::before:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-0:checked + label::after {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

<input
    class="circuit-0 circuit-1"
    id="radio-button_4"
    type="radio"
    value=""
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
}

.circuit-0::before {
  box-sizing: border-box;
  height: 16px;
  width: 16px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  box-sizing: border-box;
  height: 8px;
  width: 8px;
  background-color: #3388FF;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  opacity: 0;
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-0:not(:focus)::before {
  border-color: #DB4D4D;
  background-color: #F4CBCB;
}

.circuit-0:not(:focus)::after {
  background-color: #DB4D4D;
}

<label
    class="circuit-0 circuit-1"
    for="radio-button_4"
  />,
]
`;
